--- a/LinkerPlayer/Themes/Dark.xaml
+++ b/LinkerPlayer/Themes/Dark.xaml
@@ -64,13 +64,25 @@
   <Color x:Key="PlayStartGradientColor">#090909</Color>
   <Color x:Key="PlayEndGradientColor">#202020</Color>
 
-  <Color x:Key="MenuForegroundColor">#999999</Color>
-  <Color x:Key="MenuBackgroundColor">#999999</Color>
+  <Color x:Key="MenuForegroundColor">#505050</Color>
+  <Color x:Key="MenuBackgroundColor">#FCF7E3</Color>
   <Color x:Key="MenuDisabledColor">Gray</Color>
   <Color x:Key="MenuTextColor">Gray</Color>
-  <Color x:Key="MenuMouseOverForegroundColor">LightSteelBlue</Color>
-  <Color x:Key="MenuMouseOverBackgroundColor">Black</Color>
+  <Color x:Key="MenuMouseOverForegroundColor">#505050</Color>
+  <Color x:Key="MenuMouseOverBackgroundColor">#DCD7C1</Color>
   <Color x:Key="MenuSelectionBackgroundColor">Black</Color>
+
+  <Color x:Key="ComboboxForegroundColor">#505050</Color>
+  <Color x:Key="ComboboxBackgroundColor">#DCD7C1</Color>
+  <Color x:Key="ComboboxDisabledColor">Gray</Color>
+  <Color x:Key="ComboboxMouseOverForegroundColor">#505050</Color>
+  <Color x:Key="ComboboxMouseOverBackgroundColor">#FCF7E3</Color>
+  <Color x:Key="ComboboxItemForegroundColor">#505050</Color>
+  <Color x:Key="ComboboxItemBackgroundColor">#FCF7E3</Color>
+  <Color x:Key="ComboboxItemMouseOverForegroundColor">#505050</Color>
+  <Color x:Key="ComboboxItemMouseOverBackgroundColor">#DCD7C1</Color>
+  <Color x:Key="ComboboxItemSelectedForegroundColor">#505050</Color>
+  <Color x:Key="ComboboxItemSelectedBackgroundColor">#FCF7E3</Color>
 
   <Color x:Key="ImageBackgroundColor">Black</Color>
 
