--- a/LinkerPlayer/Windows/SettingsWindow.xaml
+++ b/LinkerPlayer/Windows/SettingsWindow.xaml
@@ -3,6 +3,7 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
   xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:models="clr-namespace:LinkerPlayer.Models"
@@ -26,48 +27,15 @@
       <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/RectangleButton.xaml" />
         <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/CustomCombobox.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/LinkerPlayer;component/Styles/StylesRepository.xaml" />
       </ResourceDictionary.MergedDictionaries>
 
-      <Style x:Key="CloseButton" TargetType="{x:Type Button}">
-        <Setter Property="Template">
-          <Setter.Value>
-            <ControlTemplate TargetType="{x:Type Button}">
-              <Grid Width="45" Height="30">
-                <Border x:Name="border" Background="Black" />
-                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-              </Grid>
-
-              <ControlTemplate.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                  <Setter TargetName="border" Property="Background">
-                    <Setter.Value>
-                      <SolidColorBrush Opacity="0.9" Color="Red" />
-                    </Setter.Value>
-                  </Setter>
-                </Trigger>
-              </ControlTemplate.Triggers>
-            </ControlTemplate>
-          </Setter.Value>
-        </Setter>
-      </Style>
-
       <Style TargetType="TextBlock">
-        <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
+        <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Foreground" Value="{DynamicResource ControlForegroundBrush}" />
         <Setter Property="VerticalAlignment" Value="Center" />
       </Style>
-
-      <Style TargetType="ComboBox">
-        <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
-        <Setter Property="FontSize" Value="16" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Height" Value="27" />
-      </Style>
-
-      <!--<Style TargetType="Grid">
-      <Setter Property="Margin" Value="0,0,0,10" />
-    </Style>-->
 
       <Style TargetType="materialDesign:PackIcon">
         <Setter Property="VerticalAlignment" Value="Center" />
@@ -112,17 +80,14 @@
 
         <Button
           Name="CloseButton"
+          Background="{DynamicResource TitleBarBackgroundBrush}"
           Click="CloseButton_Click"
-          MouseEnter="ButtonMouseEnter"
-          MouseLeave="ButtonMouseLeave"
-          Style="{DynamicResource CloseButton}">
-          <Image
-            Name="CloseButtonImage"
-            Width="10"
-            Height="10"
-            Opacity="0.6"
-            Source="/Images/close.png" />
-        </Button>
+          Content="{iconPacks:Material Close,
+                                       Width=14,
+                                       Height=14}"
+          Foreground="{DynamicResource TitleBarForegroundBrush}"
+          Style="{DynamicResource CloseButton}" />
+
       </StackPanel>
     </Grid>
 
@@ -130,7 +95,7 @@
       <StackPanel Margin="30,10,30,0">
 
         <!--  Main Output Device  -->
-        <Grid Margin="0,0,0,18">
+        <Grid Margin="0,0,0,14">
 
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150" />
@@ -143,16 +108,19 @@
             HorizontalAlignment="Right"
             Text="Main Output Device:" />
 
-          <ComboBox Style="{StaticResource CustomComboBoxStyle}"
-                    Name="MainOutputDevicesList"
-                    Grid.Column="2"
-                    Width="Auto"
-                    Height="30"
-                    Background="White"
-                    BorderBrush="Gray"
-                    BorderThickness="1"
-                    Foreground="Black"
-                    HorizontalContentAlignment="Center" />
+          <ComboBox
+            Name="MainOutputDevicesList"
+            Grid.Column="2"
+            Width="Auto"
+            Height="30"
+            HorizontalContentAlignment="Center"
+            Background="{DynamicResource ComboboxItemBackgroundBrush}"
+            BorderBrush="{DynamicResource ComboboxItemForegroundBrush}"
+            BorderThickness="1"
+            FontFamily="Segoe UI"
+            FontSize="16"
+            Foreground="{DynamicResource ComboboxItemForegroundBrush}"
+            Style="{StaticResource CustomComboBoxStyle}" />
         </Grid>
 
         <!--  Color Theme  -->
@@ -160,7 +128,7 @@
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150" />
             <ColumnDefinition Width="10" />
-            <ColumnDefinition Width="100" />
+            <ColumnDefinition Width="150" />
           </Grid.ColumnDefinitions>
 
           <TextBlock
@@ -169,18 +137,21 @@
             Foreground="{DynamicResource ControlForegroundBrush}"
             Text="Color Theme:" />
 
-          <ComboBox Style="{StaticResource CustomComboBoxStyle}"
-                     x:Name="ThemesList"
-                     Grid.Column="2"
-                     Width="Auto"
-                     Height="30"
-                     Background="White"
-                     BorderBrush="Gray"
-                     BorderThickness="1"
-                     Foreground="Black"
-                     HorizontalContentAlignment="Center"
-                     ItemsSource="{Binding Path=ThemeColors}"
-                     SelectionChanged="OnThemeSelectionChanged">
+          <ComboBox
+            x:Name="ThemesList"
+            Grid.Column="2"
+            Width="120"
+            Height="28"
+            HorizontalAlignment="Left"
+            Background="{DynamicResource ComboboxItemBackgroundBrush}"
+            BorderBrush="{DynamicResource ComboboxItemForegroundBrush}"
+            BorderThickness="1"
+            FontFamily="Segoe UI"
+            FontSize="16"
+            Foreground="{DynamicResource ComboboxItemForegroundBrush}"
+            ItemsSource="{Binding Path=ThemeColors}"
+            SelectionChanged="OnThemeSelectionChanged"
+            Style="{StaticResource CustomComboBoxStyle}">
             <ComboBoxItem Content="Light" Tag="{x:Static models:ThemeColors.Light}" />
             <ComboBoxItem Content="Gray" Tag="{x:Static models:ThemeColors.Gray}" />
             <ComboBoxItem Content="Slate" Tag="{x:Static models:ThemeColors.Slate}" />
@@ -189,38 +160,6 @@
           </ComboBox>
         </Grid>
 
-        <!--  Enable Sound Wave Visualization  -->
-        <!--<Grid>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition Width="40" />
-          </Grid.ColumnDefinitions>
-
-          <TextBlock Grid.Column="0">Enable sound wave visualization</TextBlock>
-          <ToggleButton Name="VisualizationEnabled" Grid.Column="1" />
-        </Grid>-->
-
-        <!--  Minimize to Tray On Close  -->
-        <!--<Grid>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition Width="40" />
-          </Grid.ColumnDefinitions>
-
-          <TextBlock Grid.Column="0">Minimize to tray on close</TextBlock>
-          <ToggleButton Name="MinimizeToTrayEnabled" Grid.Column="1" />
-        </Grid>-->
-
-        <!--  Enable equalizer on start  -->
-        <!--<Grid>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition Width="40" />
-          </Grid.ColumnDefinitions>
-
-          <TextBlock Grid.Column="0">Enable equalizer on start</TextBlock>
-          <ToggleButton Name="EqualizerOnStartEnabled" Grid.Column="1" />
-        </Grid>-->
       </StackPanel>
     </Grid>
 
@@ -231,8 +170,8 @@
       <Button
         Width="100"
         Height="30"
-        Margin="0,10,0,14"
-        HorizontalAlignment="Center"
+        Margin="0,10,14,14"
+        HorizontalAlignment="Right"
         Click="Close_Click"
         Content="Close"
         FontSize="18"
